[package]
name = "heredom"
version = "0.1.0"
edition = "2021"
authors = ["oooutlk <oooutlk@outlook.com>"]
license = "MIT/Apache-2.0"
keywords = ["tuple", "dom", "tree", "xml", "html"]
readme = "README.md"
repository = "https://github.com/oooutlk/heredom"
documentation = "https://docs.rs/heredom"
categories = [ "rust-patterns" ]
description = "Tuple notations to describe XML-like trees."

[dependencies]
tuplex = "0.1"
